# CONCHA

./: LICENSE  MANIFEST.in  README.md  gitignore  requirements.txt  setup.cfg
CONCHA/: contact_clustering.ipynb  wcontact_matrix.ipynb
CONCHA/.ipynb_checkpoints/: contact_clustering-checkpoint.ipynb  contact_features-checkpoint.ipynb  get_contacts-checkpoint.ipynb
concha/: contact_clustering.ipynb  contact_thresholds_range.txt  features.txt  get_coordinates.ipynb  notebooks.py  utils.ipynb
