[metadata]
name = concha
version = 1.0.0
description = Installation package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gonzalez-delgado/CONCHA
author = Javier Gonzalez Delgado
author_email = javier.gonzalez-delgado@laas.fr
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    biopython
    h5py
    hdbscan
    ipynb
    ipynb
    ipywidgets
    joblib
    jupyter
    matplotlib
    mdanalysis
    mdtraj
    numba
    numpy
    pandas
    plotly
    pot
    pynndescent
    scipy
    seaborn
    statsmodels
    tqdm
    umap-learn
python_requires >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    concha-notebooks = concha.notebooks:main
